--- a/css/grid.css
+++ b/css/grid.css
@@ -36,8 +36,8 @@
 	 float: left;
 	 min-height: 1px;
 	 position: relative;
-	 padding-right: 15px;
-	 padding-left: 15px;
+	 padding-right: 1rem;
+	 padding-left: 1rem;
  }
 
 /*
