--- a/css/animations.css
+++ b/css/animations.css
@@ -144,9 +144,9 @@ body.fade-on-load {
 /* Loading Spin Static */
 
 .loading-spin-static {
-    width: 1.5em;
-    height: 1.5em;
-    border: 0.25em solid black;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 0.25rem solid black;
     border-right-color: transparent;
     border-radius: 50%;
 
@@ -155,15 +155,15 @@ body.fade-on-load {
 }
 
 .loading-spin-static-small {
-    width: 1em;
-    height: 1em;
-    border-width: 0.2em;
+    width: 1rem;
+    height: 1rem;
+    border-width: 0.2rem;
 }
 
 .loading-spin-static-large {
-    width: 2em;
-    height: 2em;
-    border-width: 0.35em;
+    width: 2rem;
+    height: 2rem;
+    border-width: 0.35rem;
 }
 
 .loading-spin-static-white {
