--- a/css/general.css
+++ b/css/general.css
@@ -32,9 +32,9 @@ html, body {
 }
 
 hr {
-	margin-left: 5em;
-	margin-right: 5em;
-	margin-top: 2em;
-	margin-bottom: 2em;
+	margin-left: 5rem;
+	margin-right: 5rem;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 	color: var(--colors-white);
 }
