--- a/css/icons.css
+++ b/css/icons.css
@@ -18,12 +18,12 @@
 */
 
 .fas {
-    padding-right: 0.25em;
+    padding-right: 0.25rem;
     vertical-align: -5%;
 }
 
 [class ^= "icon-"] {
-    padding: 0 0.25em 0 0.25em !important;
+    padding: 0 0.25rem 0 0.25rem !important;
 }
 
 /*
