--- a/css/navigation.css
+++ b/css/navigation.css
@@ -27,7 +27,7 @@
 
 div.menu a {
 	text-decoration: none !important;
-	padding: 0.5em 1em;
+	padding: 0.5rem 1rem;
 	position: relative;
 }
 
@@ -78,10 +78,10 @@ div.menu-fixed {
 .navigation-arrow {
 	position: fixed;
 	top: 0;
-	width: 2em;
-	font-size: 1.7em;
+	width: 2rem;
+	font-size: 1.7rem;
 	text-align: center;
-	line-height: 2em;
+	line-height: 2rem;
 }
 
 .navigation-arrow.left         { left: 0; }
@@ -96,7 +96,7 @@ div.menu-fixed {
 .navbar {
 	display: block;
 	width: 100%;
-	height: 3.5em;
+	height: 3.5rem;
 	top: 0;
 	left: 0;
 	color: var(--colors-black);
@@ -105,7 +105,7 @@ div.menu-fixed {
 
 .navbar-item {
 	flex: 0 1 auto;
-	padding: 1em 1.5em;
+	padding: 1rem 1.5rem;
 	vertical-align: middle;
 }
 
@@ -122,8 +122,8 @@ div.menu-fixed {
 .navbar img.icon {
 	display: inline-block;
 	white-space: nowrap;
-	margin: 0.5em;
-	height: calc(100% - 1em);
+	margin: 0.5rem;
+	height: calc(100% - 1rem);
 	width: auto;
 }
 
