--- a/css/sliders.css
+++ b/css/sliders.css
@@ -24,7 +24,7 @@
 .progress {
 	display: flex;
 	display: -ms-flexbox; /* IE 10 */
-	height: 1em;
+	height: 1rem;
 	overflow: hidden;
 
 	background-color: var(--colors-white);
@@ -46,8 +46,8 @@
  */
 
  .slider {
-	margin-top: 1em;
-	margin-bottom: 1em;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 
 	display: flex;
 	display: -ms-flexbox; /* IE 10 */
@@ -57,7 +57,7 @@
 	-webkit-appearance: none;
 	appearance: none;
 	width: 100%;
-	height: 0.5em;
+	height: 0.5rem;
 	outline: none;
 	opacity: 0.8;
 	transition: opacity 0.15s;
@@ -77,8 +77,8 @@
 .slider input[type="range"]::-moz-range-thumb {
 	-webkit-appearance: none;
 	appearance: none;
-	width: 1.5em;
-	height: 1.5em;
+	width: 1.5rem;
+	height: 1.5rem;
 	cursor: pointer;
 }
 
@@ -102,18 +102,18 @@
 
 .slider-small input[type="range"]::-webkit-slider-thumb,
 .slider-small input[type="range"]::-moz-range-thumb {
-	width: 1.5em;
-	height: 1.5em;
+	width: 1.5rem;
+	height: 1.5rem;
 }
 
 .slider-medium input[type="range"]::-webkit-slider-thumb,
 .slider-medium input[type="range"]::-moz-range-thumb {
-	width: 2em;
-	height: 2em;
+	width: 2rem;
+	height: 2rem;
 }
 
 .slider-large input[type="range"]::-webkit-slider-thumb,
 .slider-large input[type="range"]::-moz-range-thumb {
-	width: 2.5em;
-	height: 2.5em;
+	width: 2.5rem;
+	height: 2.5rem;
 }
