--- a/css/placement.css
+++ b/css/placement.css
@@ -35,8 +35,9 @@
 
 .container-fullscreen {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .container-center {
