--- a/css/placement.css
+++ b/css/placement.css
@@ -35,7 +35,7 @@
 
 .container-fullscreen {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
