--- a/css/input.css
+++ b/css/input.css
@@ -174,6 +174,7 @@ input[type="password"].cyan:focus, .cyan input[type="password"]:focus {
 .input-group {
 	width: 100%;
 	display: flex;
+	display: -webkit-flex;
 	font-size: 1rem;
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
@@ -185,6 +186,7 @@ input[type="password"].cyan:focus, .cyan input[type="password"]:focus {
 	background-color: var(--colors-bright-white);
 	background-size: cover;
 	display: flex;
+	display: -webkit-flex;
 }
 
 .input-group .suffix {
