--- a/css/placement.css
+++ b/css/placement.css
@@ -86,8 +86,8 @@
 .display-block   { display: block;  }
 .display-inline  { display: inline; }
 .display-table   { display: table;  }
-.display-flex    { display: flex;   }
 .display-none    { display: none;   }
+.display-flex    { display: flex; display: -webkit-flex   }
 
 /* Floating */
 
