--- a/css/agility-design.css
+++ b/css/agility-design.css
@@ -27,6 +27,7 @@
 @import "panels.css";
 @import "images.css";
 @import "general.css";
+@import "shadows.css";
 @import "buttons.css";
 @import "sliders.css";
 @import "platform.css";
